force-app/main/default/objects/Merchant_order_line__c/Merchant_order_line__c.object-meta.xml
<CustomObject>
    <label>Merchant order line</label>
    <nameField>
        <label>Merchant OLI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchant order lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>