force-app/main/default/objects/Merchant_order_line__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchant order lines</relationshipLabel>
    <relationshipName>Merchant_order_lines</relationshipName>
    <type>Lookup</type>
</CustomField>