force-app/main/default/objects/Merchant_order_line__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Merchant order lines</relationshipLabel>
    <relationshipName>Merchant_order_lines</relationshipName>
    <type>Lookup</type>
</CustomField>