force-app/main/default/objects/Merchant_order_line__c/fields/OLI_add_on__c.field-meta.xml
<CustomField>
    <fullName>OLI_add_on__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OLI add-on</label>
    <referenceTo>OLI_add_on__c</referenceTo>
    <relationshipLabel>Merchant order lines</relationshipLabel>
    <relationshipName>Merchant_order_lines</relationshipName>
    <type>Lookup</type>
</CustomField>