force-app/main/default/objects/Merchant_order_line__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Merchant order lines</relationshipLabel>
    <relationshipName>Merchant_order_lines</relationshipName>
    <type>Lookup</type>
</CustomField>