force-app/main/default/objects/Merchant_order_line__c/fields/Order_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Items__c</fullName>
    <label>Order Line Items</label>
    <referenceTo>Order_Line_Items__c</referenceTo>
    <relationshipLabel>Merchant order lines</relationshipLabel>
    <relationshipName>Merchant_order_lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>